[MJLINK-41] --add-options support
  - IT "cli-options/add-options" will now look for parameters in build.log.
  - removed a superfluous %n.
  - A MojoFailureException is now being thrown if the user does not meet the JDK14 requirements (neither toolchain nor JAVA_HOME).
  - warn user if toolchain could not be checked.
  - added IT MJLINK-41_addoptions-11 which checks for the error message being thrown if java requirements were not met.